# PI_Group14

./: .gitignore  LICENSE  README.md
SystemStack/: README.md
SystemStack/Back-End/django_config/: settings.py
SystemStack/Comms/: .env  .gitignore  Client.py  Dockerfile  QKDServer.py  addressDB.py  docker-compose.yaml  gunicorn_conf.py  init_address_db.sql  keyDB.py  msg.py  reconInt.py  register.py  requirements.txt  util.py
SystemStack/backend/: db.sqlite3  requirements.txt
SystemStack/backend/authentication/: forms.py  models.py  views.py
SystemStack/backend/database/: Dockerfile
SystemStack/backend/django_config/: settings.py  urls.py
SystemStack/backend/entities/: forms.py  models.py  tests.py  views.py
SystemStack/backend/warehouse/: models.py  routers.py  views.py
SystemStack/frontend/ionic-app/: .gitignore  README.md  capacitor.config.ts  ionic.config.json  package-lock.json  package.json
doc/: linkTrailer.txt  linkVideo.txt
doc/diagrams/: Communication.drawio  EntityDiagram.drawio  EntityDiagramV2.drawio  PersistenceLayerDiagram.drawio  QKD-Reconcilation_Filesystem.drawio  QKD-Reconcilation_Redis.drawio  QKD-Reconcilation_Redix.drawio  Station.java
reconciliation/: .gitignore
reconciliation/doc/diagrams/: QKD-Reconcilation_Redis.drawio
reconciliation/src/: Containerfile  reconciliation.sln
reconciliation/src/cv_qokd_ldpc_multi_machine_etsi_004/: Makefile  input_parameters_rx.txt  (+7 more)
reconciliation/src/kms_reconciliation/kms/doc/tex/sdf/message_handler/tests/tests/: CMakeLists.txt  adapted_ip_tunnel_linux.cpp  destination_translation_table_tests.cpp  input_translation_table_tests.cpp  priority_buffer_tests.cpp  rx_message_handler_tests.cpp  t_handler_message_tests.cpp  test_tests.sh  tx_message_handler_tests.cpp  various_signal_types_tests.cpp
reconciliation/src/kms_reconciliation/kms/doc/tex/sdf/message_handler/tests/tests/test_complete_system/: CMakeLists.txt  README.md  dummy_block.h  left_superblock.h  right_superblock.h  test_complete_system.cpp
src/: Containerfile  README.md  Run.sh
src/cryptopp850/: .gitignore  GNUmakefile  GNUmakefile-cross  History.txt  aes_armv4.S  cryptopp.supp  sha1_armv4.S  sha256_armv4.S  sha512_armv4.S
src/cv_qokd_ldpc_multi_machine_etsi_004/: Makefile  Makefile_rx  Makefile_tx  compile_run_cv_qokd_ldpc_etsi.sh  cv_qokd_ldpc_multi_machine.vcxproj  cv_qokd_ldpc_multi_machine.vcxproj.filters  cv_qokd_ldpc_multi_machine_sdf.cpp  cv_qokd_ldpc_multi_machine_sdf.h  cv_qokd_ldpc_multi_machine_sdf_rx.cpp  cv_qokd_ldpc_multi_machine_sdf_tx.cpp  input_parameters_rx.txt  input_parameters_tx.txt
src/cv_qokd_ldpc_multi_machine_messageHandler/: Makefile  Makefile_rx  Makefile_tx  README.md  README_old.md  compile_run_cv_qokd_ldpc_message_handler.sh  cv_qokd_ldpc_multi_machine_sdf.h  cv_qokd_ldpc_multi_machine_sdf_rx.cpp  cv_qokd_ldpc_multi_machine_sdf_tx.cpp  input_parameters_rx.txt  input_parameters_tx.txt
src/cv_qokd_ldpc_multi_machine_messageHandler_etsi004/: Makefile  Makefile_rx  Makefile_rx_loadfile  Makefile_tx  Makefile_tx_loadfile  client_rx  client_rx.cpp  client_tx  client_tx.cpp  compile_run_cv_qokd_ldpc_message_handler.sh  cv_qokd_ldpc_multi_machine_sdf.cpp  cv_qokd_ldpc_multi_machine_sdf.h  cv_qokd_ldpc_multi_machine_sdf_rx.cpp  cv_qokd_ldpc_multi_machine_sdf_tx.cpp  input_parameters_rx.txt  input_parameters_rx_LoadFile.txt  input_parameters_tx.txt  input_parameters_tx_LoadFile.txt  server_rx.cpp  server_tx  server_tx.cpp
src/emulator/: Makefile  emulator.cpp
src/include/: add_20200819.h  dv_qkd_ldpc_rx_20200819.h  dv_qkd_ldpc_rx_parameter_estimation_20200819.h  dv_qkd_rx_incoming_data_processor_20200819.h  electrical_filter_20200819.h  laser_20200819.h  ms_windows_network_aux_common_20200819.h  optical_hybrid_20200819.h
src/lib/: add_20200819.cpp  cv_qokd_ldpc_tx_sindrome_reconciliation_20200819.cpp  differential_photoreceiver_20200819.cpp  dv_qkd_ldpc_rx_parameter_estimation_20200819.cpp  dv_qkd_ldpc_tx_20200819.cpp  dv_qkd_tx_bases_reconciliation_20200819.cpp  m_qam_transmitter_20200819.cpp  ms_windows_network_aux_common_20200819.cpp  optical_amplifier_20200819.cpp  photodiode_20200819.cpp  pulse_shaper_20200819.cpp  qber_20200819.cpp  sampler_20200819.cpp
(+613 files in other folders)
